# mqtt_schedule

./: .gitignore  README.md  pyproject.toml
deploy/: install_linux.sh  mqtt_schedule.env.example  mqtt_schedule.service  runtime.example.json
docs/: airtable-file-contract.md  legacy-system-analysis.md
src/mqtt_schedule/: __init__.py  access_control.py  airtable_repositories.py  airtable_sync.py  app.py  cli.py  controller_status.py  csv_reporting.py  domain.py  hostinfo.py  identity.py  inbound.py  mongo.py  mongo_ingestion.py  mongo_openweather.py  mongo_tempest.py  mqtt_adapter.py  runtime.py  scheduler.py  service.py  settings.py  weather_adapters.py  weather_refresh.py
tests/: test_access_control.py  test_airtable_repositories.py  test_airtable_sync.py  test_cli_filtering.py  test_controller_status.py  test_explain.py  test_identity.py  test_inbound.py  test_mongo.py  test_mongo_openweather.py  test_mongo_tempest.py  test_mqtt_adapter.py  test_scheduler.py  test_service.py  test_settings.py  test_weather_adapters.py  test_weather_refresh.py
tests/fixtures/legacy_config/: airtable_config_data.json  airtable_schedule_data.json  ow_records_current.json
tests/fixtures/legacy_tempest_weather_data/: station_obs_201749.json  station_obs_201749_20260616.json  station_obs_201749_20260619.json
